--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,18 +13,16 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="350dp"
 	    android:scrollbars="vertical"
-	    android:text="TextView_Main" >
-
-	</TextView>
+	    android:text="@string/textview1"
+	    android:background="@color/border" />
 
 	<Button
 	    android:id="@+id/button1"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_alignLeft="@+id/fizzyOutput"
-	    android:layout_alignParentBottom="true"
-	    android:layout_marginBottom="20dp"
-	    android:layout_marginLeft="20dp"
-	    android:text="Go!" />
+	    android:layout_alignRight="@+id/fizzyOutput"
+	    android:layout_below="@+id/fizzyOutput"
+	    android:layout_marginTop="15dp"
+	    android:text="@string/btn1" />
 
 </RelativeLayout>
