--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,4 +25,20 @@
 	    android:layout_marginTop="15dp"
 	    android:text="@string/btn1" />
 
+	<EditText
+	    android:id="@+id/editText1"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignBottom="@+id/button1"
+	    android:layout_alignLeft="@+id/fizzyOutput"
+	    android:layout_alignTop="@+id/button1"
+	    android:background="@color/edittext1"
+	    android:ems="4"
+	    android:hint="@string/editText1"
+	    android:gravity="center"
+	    android:inputType="number" >
+
+	    <requestFocus />
+	</EditText>
+
 </RelativeLayout>
