--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,37 +8,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+	<EditText
+	    android:id="@+id/editText1"
+	    android:layout_width="wrap_content"
+	    android:layout_height="40dp"
+	    android:background="@color/edittext1"
+	    android:ems="4"
+	    android:gravity="center"
+	    android:hint="@string/editText1"
+	    android:inputType="number" >
+
+	    <requestFocus />
+	</EditText>
+
 	<TextView
 	    android:id="@+id/fizzyOutput"
 	    android:layout_width="fill_parent"
-	    android:layout_height="350dp"
+	    android:layout_height="fill_parent"
+	    android:layout_below="@+id/button1"
+	    android:layout_marginTop="20dp"
+	    android:background="@color/border"
 	    android:scrollbars="vertical"
-	    android:text="@string/textview1"
-	    android:background="@color/border" />
+	    android:text="@string/textview1" />
 
 	<Button
 	    android:id="@+id/button1"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignRight="@+id/fizzyOutput"
-	    android:layout_below="@+id/fizzyOutput"
-	    android:layout_marginTop="15dp"
+	    android:layout_alignTop="@+id/editText1"
 	    android:text="@string/btn1" />
-
-	<EditText
-	    android:id="@+id/editText1"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignBottom="@+id/button1"
-	    android:layout_alignLeft="@+id/fizzyOutput"
-	    android:layout_alignTop="@+id/button1"
-	    android:background="@color/edittext1"
-	    android:ems="4"
-	    android:hint="@string/editText1"
-	    android:gravity="center"
-	    android:inputType="number" >
-
-	    <requestFocus />
-	</EditText>
 
 </RelativeLayout>
