--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,7 +16,9 @@
 	    android:ems="4"
 	    android:gravity="center"
 	    android:hint="@string/editText1"
-	    android:inputType="number" >
+	    android:inputType="number"
+	    android:maxLength="3"
+	    android:maxLines="1" >
 
 	    <requestFocus />
 	</EditText>
